--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="styles.css">
   <meta name="google-site-verification" content="tFAouxLU3GijmVGdJfI4MdOLWRpAzGrWJP8_1jw5_HY" />
   <meta>
-  <title>imgsequence</title>
+  <title>websequence</title>
 </head>
 
 <body>
   <header>
-        <a id="logo" href=""><img src="" alt="">imgsequence</a>
+        <a id="logo" href=""><img src="" alt="">websequence</a>
         <nav id="navbar">
             <ul id="nav-links">
                 <li class="link1"><a class="nvlink" id="home" href="">home</a></li>
@@ -94,32 +94,17 @@
       <ul>
         <il>heelo</il>
         <il>heelo</il>
-        <il>heelo</il>
-        <il>heelo</il>
-        <il>heelo</il>
-        <il>heelo</il>
+        
       </ul>
       <ul>
-        <il>hie</il>
-        <il>hie</il>
-        <il>hie</il>
-        <il>hie</il>
         <il>hie</il>
         <il>hie</il>
       </ul>
       <ul>
         <il>hadda</il>
         <il>hadda</il>
-        <il>hadda</il>
-        <il>hadda</il>
-        <il>hadda</il>
-        <il>hadda</il>
       </ul>
       <ul>
-        <il>sfrsad</il>
-        <il>sfrsad</il>
-        <il>sfrsad</il>
-        <il>sfrsad</il>
         <il>sfrsad</il>
         <il>sfrsad</il>
       </ul>
