--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
   <footer>
     <div class="">
       <ul>
-        <il>heelo</il>
-        <il>heelo</il>
+        <il>Social</il>
+        <il>About</il>
         
       </ul>
       <ul>
-        <il>hie</il>
-        <il>hie</il>
+        <il>info</il>
+        <il>Phone</il>
       </ul>
       <ul>
-        <il>hadda</il>
+        <il>Address</il>
         <il>hadda</il>
       </ul>
       <ul>
@@ -109,6 +109,7 @@
         <il>sfrsad</il>
       </ul>
     </div>
+    <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">copyright© 2023 <a  id="ur" target="_blank" href="https://www.instagram.com/uneerajrekwar/"  download>neerajrekwar</a></li>
   </footer>
 </body>
 
