--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <meta name="google-site-verification" content="tFAouxLU3GijmVGdJfI4MdOLWRpAzGrWJP8_1jw5_HY" />
+  
   <meta>
   <title>websequence</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C5FYLE9FB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-0C5FYLE9FB');
+</script>
 </head>
 
 <body>
