--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
         <il>sfrsad</il>
       </ul>
     </div>
+    <div class="contact-box">
+      <form name="contact" netlify>
+        <p>
+          <label>Name <input type="text" name="name" /></label>
+        </p>
+        <p>
+          <label>Email <input type="email" name="email" /></label>
+        </p>
+        <p>
+          <button type="submit">Send</button>
+        </p>
+      </form>
+    </div>
     <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">copyright© 2023 <a  id="ur" target="_blank" href="https://www.instagram.com/uneerajrekwar/"  download>neerajrekwar</a></li>
   </footer>
 </body>
