--- a/index.html
+++ b/index.html
@@ -89,17 +89,27 @@
       </ul>
     </div>
     <div class="contact-box">
-      <form name="contact" netlify>
+      <form name="contact" method="POST" data-netlify="true">
         <p>
-          <label>Name <input type="text" name="name" /></label>
+          <label>Your Name: <input type="text" name="name" /></label>
         </p>
         <p>
-          <label>Email <input type="email" name="email" /></label>
+          <label>Your Email: <input type="email" name="email" /></label>
+        </p>
+        <p>
+          <label>Your Role: <select name="role[]" multiple>
+            <option value="leader">Leader</option>
+            <option value="follower">Follower</option>
+          </select></label>
+        </p>
+        <p>
+          <label>Message: <textarea name="message"></textarea></label>
         </p>
         <p>
           <button type="submit">Send</button>
         </p>
       </form>
+      
     </div>
     <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">copyright© 2023 <a  id="ur" target="_blank" href="https://www.instagram.com/uneerajrekwar/"  download>neerajrekwar</a></li>
   </footer>
