--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           <label>Your Email: <input type="email" name="email" /></label>
         </p>
         <p>
+          <input type="hidden" name="form-name" value="contact">
+        </p>
+        <p>
           <label>Your Role: <select name="role[]" multiple>
             <option value="leader">Leader</option>
             <option value="follower">Follower</option>
