--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <a id="logo" href=""><img src="" alt="">websequence</a>
         <nav id="navbar">
             <ul id="nav-links">
-                <li class="link1"><a class="nvlink" id="home" href="/home.html">home</a></li>
-                <li class="link2"><a class="nvlink" href="/about.html">about</a></li>
-                <li class="link3"><a class="nvlink" href="/works.html">works</a></li>
-                <li class="link4"><a class="nvlink" href="/services.html">services</a></li>
+                <li class="link1"><a class="nvlink" id="home" href="/home">home</a></li>
+                <li class="link2"><a class="nvlink" href="/about">about</a></li>
+                <li class="link3"><a class="nvlink" href="/works">works</a></li>
+                <li class="link4"><a class="nvlink" href="/services">services</a></li>
             </ul>
         </nav>
     </header>
