--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <meta name="google-site-verification" content="tFAouxLU3GijmVGdJfI4MdOLWRpAzGrWJP8_1jw5_HY" />
+  <meta name="description" content="Transform Your Business Online: Explore the art of digital marketing and cultivate a strong online presence that resonates with your audience">
   <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/@algolia/algoliasearch-netlify-frontend@1/dist/algoliasearchNetlify.css" />
   <title>Websequence</title>
