--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
         <il>sfrsad</il>
       </ul>
     </div>
-    
-    <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">copyright© 2023 <a id="ur"
-        target="_blank" href="https://www.instagram.com/uneerajrekwar/" download>neerajrekwar</a></li>
+    <!-- <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">copyright© 2023 <a id="ur"
+        target="_blank" href="https://www.instagram.com/uneerajrekwar/" download>neerajrekwar</a></li> -->
   </footer>
 </body>
 
