--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
     </div>
     <div class="contact-box">
       <form name="contact" method="POST" data-netlify="true">
-        <p>
+        <p class="form-set">
           <label>Your Name: <input type="text" name="name" /></label>
         </p>
         <p>
           <label>Your Email: <input type="email" name="email" /></label>
         </p>
         <p>
-          <input type="hidden" name="form-name" value="contact">
+         <label>Phone: <input type="tel" name="form-number" placeholder="123-456-7890"></label>
         </p>
         <p>
           <label>Your Role: <select name="role[]" multiple>
@@ -99,27 +99,19 @@
     </div>
   </main>
   <footer>
-    <div class="">
-      <ul>
-        <il>Social</il>
-        <il>About</il>
-
+    <div class="footer-box">
+      <ul class="footer-items">
+        <il class="item" >Social</il>
+        <il class="item" >Address</il>
       </ul>
       <ul>
-        <il>info</il>
-        <il>Phone</il>
-      </ul>
-      <ul>
-        <il>Address</il>
-        <il>hadda</il>
-      </ul>
-      <ul>
-        <il>sfrsad</il>
-        <il>sfrsad</il>
+        <il class="item" >info</il>
+        <il class="item" >Phone</il>
       </ul>
     </div>
-    <!-- <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">copyright© 2023 <a id="ur"
-        target="_blank" href="https://www.instagram.com/uneerajrekwar/" download>neerajrekwar</a></li> -->
+    <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">
+      &#0169; 2023 <a id="ur"
+        target="_blank" href="https://www.instagram.com/uneerajrekwar/" download>neerajrekwar</a></li>
   </footer>
 </body>
 
