--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="canonical" href="https://websequence.netlify.app/" />
+  <link rel="stylesheet" href="styles.css">\
   <meta name="description"
     content="Transform Your Business Online: Explore the art of digital marketing and cultivate a strong online presence that resonates with your audience">
   <meta name="google-site-verification" content="tFAouxLU3GijmVGdJfI4MdOLWRpAzGrWJP8_1jw5_HY" />
