--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <label>Message: <textarea name="message"></textarea></label>
         </p>
         <p>
-          <button type="submit">Send</button>
+          <button class="btn" type="submit">Send</button>
         </p>
       </form>
 
