--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p>
           <label>Your Role: <select name="role[]" multiple>
               <option value="leader">Leader</option>
-              <option value="follower">Follower</option>
+              <option value="follower" selected>Follower</option>
             </select></label>
         </p>
         <p>
