--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <a id="logo" href=""><img src="" alt="">websequence</a>
     <nav id="navbar">
       <ul id="nav-links">
-        <li class="link1"><a class="nvlink" id="home" href="home.html">home</a></li>
         <li class="link2"><a class="nvlink" href="about.html">about</a></li>
         <li class="link3"><a class="nvlink" href="works.html">works</a></li>
         <li class="link4"><a class="nvlink" href="services.html">services</a></li>
+        <li class="link1"><a class="nvlink"  href="contacts">home</a></li>
       </ul>
     </nav>
   </header>
@@ -73,7 +73,7 @@
       <div class="mid-container"></div>
     </div>
     <div class="contact-box">
-      <form name="contact" method="POST" data-netlify="true">
+      <form name="contact" id="contacts" method="POST" data-netlify="true">
         <p class="form-set">
           <label>Your Name: <input type="text" name="name" /></label>
         </p>
