--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
     <a id="logo" href=""><img src="" alt="">websequence</a>
     <nav id="navbar">
       <ul id="nav-links">
+        <li class="link1"><a class="nvlink" aria-current="page" href="contacts">home</a></li>
         <li class="link2"><a class="nvlink" href="about.html">about</a></li>
         <li class="link3"><a class="nvlink" href="works.html">works</a></li>
         <li class="link4"><a class="nvlink" href="services.html">services</a></li>
-        <li class="link1"><a class="nvlink"  href="contacts">home</a></li>
+        
       </ul>
     </nav>
   </header>
