--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
     <a id="logo" href=""><img src="" alt="">websequence</a>
     <nav id="navbar">
       <ul id="nav-links">
-        <li class="link1"><a class="nvlink" aria-current="page" href="contacts">home</a></li>
+        <li class="link1"><a class="nvlink" aria-current="page" href="home.html">home</a></li>
         <li class="link2"><a class="nvlink" href="about.html">about</a></li>
         <li class="link3"><a class="nvlink" href="works.html">works</a></li>
         <li class="link4"><a class="nvlink" href="services.html">services</a></li>
-        
       </ul>
     </nav>
   </header>
@@ -46,10 +45,11 @@
         <div class="cards">
 
           <div class="card">
-            <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, ipsa totam. Aspernatur unde
-              laudantium tenetur id vero facere beatae asperiores ratione, obcaecati magni et sint eos deleniti iste
-              quisquam doloremque!</p>
+            <h1>how to grow online</h1>
+            <p>Digital marketing is a dynamic and transformative approach to promoting products, services, and brands in
+              the digital realm. Unlike traditional marketing methods, which rely on offline channels such as print
+              media and television, digital marketing with <a class="btn" href="https://websequence.netlify.app/">websequence</a> utilizes the vast landscape of the internet to reach a global
+              audience</p>
           </div>
           <div class="card">
             <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h1>
@@ -82,7 +82,7 @@
           <label>Your Email: <input type="email" name="email" /></label>
         </p>
         <p>
-         <label>Phone: <input type="tel" name="form-number" placeholder="123-456-7890"></label>
+          <label>Phone: <input type="tel" name="form-number" placeholder="123-456-7890"></label>
         </p>
         <p>
           <label>Your Role: <select name="role[]" multiple>
@@ -103,17 +103,17 @@
   <footer>
     <div class="footer-box">
       <ul class="footer-items">
-        <il class="item" >Social</il>
-        <il class="item" >Address</il>
+        <il class="item">Social</il>
+        <il class="item">Address</il>
       </ul>
       <ul>
-        <il class="item" >info</il>
-        <il class="item" >Phone</il>
+        <il class="item">info</il>
+        <il class="item">Phone</il>
       </ul>
     </div>
     <li class="cyrt" style="font-family: 'Alata', sans-serif; font-size: .7em;">
-      &#0169; 2023 <a id="ur"
-        target="_blank" href="https://www.instagram.com/uneerajrekwar/" download>neerajrekwar</a></li>
+      &#0169; 2023 <a id="ur" target="_blank" href="https://www.instagram.com/uneerajrekwar/" download>neerajrekwar</a>
+    </li>
   </footer>
 </body>
 
