--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>how to grow online</h1>
             <p>Digital marketing is a dynamic and transformative approach to promoting products, services, and brands in
               the digital realm. Unlike traditional marketing methods, which rely on offline channels such as print
-              media and television, digital marketing with <a class="btn" href="https://websequence.netlify.app/">websequence</a> utilizes the vast landscape of the internet to reach a global
+              media and television, digital marketing with <a href="https://websequence.netlify.app/">websequence</a> utilizes the vast landscape of the internet to reach a global
               audience</p>
           </div>
           <div class="card">
