--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="canonical" href="https://websequence.netlify.app/" />
   <link rel="stylesheet" href="styles.css">\
   <meta name="description"
-    content="Transform Your Business Online: Explore the art of digital marketing and cultivate a strong online presence that resonates with your audience">
+    content="websequence Transform Your Business Online: Explore the art of digital marketing and cultivate a strong online presence that resonates with your audience">
   <meta name="google-site-verification" content="tFAouxLU3GijmVGdJfI4MdOLWRpAzGrWJP8_1jw5_HY" />
 
   <link rel="stylesheet"
